Fixed overflow of toolbar content behind scrollbar

--- a/burger-builder/src/components/UI/Navigation/Toolbar/Toolbar.module.css
+++ b/burger-builder/src/components/UI/Navigation/Toolbar/Toolbar.module.css
@@ -2,7 +2,7 @@
     height: 65px;
     background-color: rgb(48, 48, 48);
     color: white;
-    width: 100vw;
+    width: 100%;
     position: fixed;
     box-shadow: 0px 2px 6px -2px rgb(138, 138, 138);
     top: 0;
